# smarc_utils

./: .gitignore  README.md  release_packages.yaml  smarc_utils.rosinstall
.github/workflows/: main.yml
axis_cams_utils/: CMakeLists.txt  package.xml
axis_cams_utils/launch/: cam_mqtt_srvr.launch  mqtt_cams_srvr.launch
external_cams/: CMakeLists.txt  README.md  package.xml  tank_urdf.launch
external_cams/config/: axis_mqtt_clt.yaml  axis_mqtt_srvr.yaml
external_cams/launch/: axis_mqtt_clt.launch  axis_mqtt_srvr.launch  qr_spinnaker.launch  qr_spinnaker_post.launch
external_cams/scripts/: visual_cam.py
landmark_visualizer/: CMakeLists.txt  package.xml
landmark_visualizer/src/: landmark_visualizer_node.cpp
landmark_visualizer/srv/: init_map.srv
leak_alarm/: CHANGELOG.rst  CMakeLists.txt  package.xml
leak_alarm/scripts/: leak_alarm.py
marked_pos_publisher/: CHANGELOG.rst  CMakeLists.txt  package.xml
marked_pos_publisher/scripts/: marked_pos_publisher.py
message_joiner/: CHANGELOG.rst  CMakeLists.txt  package.xml
message_joiner/launch/: joiner.launch
message_joiner/src/: message_joiner_node.cpp
odom_tf_bc/: CMakeLists.txt  package.xml
odom_tf_bc/src/: odom_tf_bc_node.cpp
smarc_bringup/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
smarc_bringup/launch/: .pipe_following_lolo.sh.swp  auv_model.launch  auv_scenarios.launch  auv_system.launch  ekf_localization.launch  lolo_ekf_random_rocks.launch  lolo_pipe_following.launch  pipe_following_lolo.sh
smarc_bringup/rviz/: auv_rviz.rviz  pipe_following.rviz
smarc_bringup/scripts/: pipe_following.sh
smarc_gt_bc/: CHANGELOG.rst  CMakeLists.txt  package.xml
smarc_gt_bc/src/: ground_truth_bc_node.cpp
smarc_gz_model_cleaner/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
smarc_gz_model_cleaner/scripts/: gz_models_cleaner.py
smarc_keyboard_teleop/: CHANGELOG.rst  CMakeLists.txt  package.xml
smarc_keyboard_teleop/launch/: keyboard_teleop.launch
smarc_keyboard_teleop/scripts/: .lolo_auv_teleop.py.swp  example_auv_teleop.py  large_auv_teleop.py  lolo_auv_teleop.py  lolo_auv_teleop_joystick.py  sam_auv_teleop.py  sam_real_teleop.py  small_auv_teleop.py  teleop.py
smarc_lm_visualizer/: CMakeLists.txt  package.xml
smarc_lm_visualizer/src/: landmark_visualizer_node.cpp
sss_viewer/: CHANGELOG.rst  CMakeLists.txt  package.xml  view_sidescan.py
sss_viewer/scripts/: view_sidescan.py
